--- a/css/My CSTU Passport website css.css
+++ b/css/My CSTU Passport website css.css
@@ -1,114 +1,270 @@
 * {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+ 
 
 header h1 {
-   text-align: center;
-   background-color: #98FB98;
+    background-color: #98FB98;
 }
 
+
+.content {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+ 
 .banner {
-   background-color: lemonchiffon;
-   height: 400px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    background-color: lemonchiffon;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
+ 
 .banner-info {
-   text-align: center;
+    text-align: center;
 }
-
+ 
 .banner-info img {
-   width: 300px;
-   height: 350px;
-   border-radius: 100%;
-}
-
+    width: 300px;
+    height: 350px;
+    border-radius: 100%;
+ }
+ 
 .banner-info p {
-   font-size: 25px;
-}
-
+    font-size: 25px;
+ }
+ 
 nav {
-   display: flex;
-   justify-content: space-between;
-   border: 10px solid #98FB98;
-   padding: 10px;
+    background-color: #98FB98;
+    
+ }
+
+ .menu-active {
+    display: block !important;
 }
 
+.wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+
+ }
+
+.logo {
+    color: #333 ;
+}
+ 
 .menu {
-   display: flex;
-   list-style: none;
-}
-
+    display: flex;
+    list-style: none;
+ }
+ 
 .menu li {
-   margin : 10px;
-   font-size: 30px;
-   text-align: center;
-}
-
+    margin-left : 20px;
+    font-size: 20px;
+ }
+ 
 .menu li a {
-   text-decoration: none;
-   color: #333;
-   background-color: whitesmoke;
-   margin-left: 150px;
-   margin-right: 150px;
-   font-weight: bold;
-}
-
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+ }
+ 
 main {
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
-}
-
+    padding: 2rem 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+ }
+ 
 main div p {
-   text-align: center;
-   font-size: 50px;
-   margin: 40px;
-   background-color: aliceblue;
-}
-
+    text-align: center;
+    font-size: 50px;
+    margin: 40px;
+    background-color: aliceblue;
+ }
+ 
 .ig {
-   font-size: 28px;
-   text-align: center;
-   text-decoration: none;
-}
-
+    font-size: 28px;
+    text-align: center;
+    text-decoration: none;
+ }
+ 
 main div h5 {
-   font-size: 20px;
-}
-
+    font-size: 20px;
+ }
+ 
 main div iframe {
-   border-radius: 10px;
-   margin-top: 20px;
-}
-
+    border-radius: 10px;
+    margin-top: 20px;
+ }
+ 
 main div li {
-   font-size: 25px;
-   margin: 10px;
-}
-
+    font-size: 25px;
+    margin: 10px;
+ }
+ 
 main div h3 {
-   font-size: 30px;
-   margin-left: 50px;
-}
-
+    font-size: 30px;
+    margin-left: 50px;
+ }
+ 
 main div video {
-   margin: 120px;
-   margin-top: 20px;
-   border: #333;
-   background-color: black;
-
-}
- main div img {
-   margin: 45px;
+    margin: 120px;
+    margin-top: 20px;
+    border: #333;
+    background-color: black;
+ 
  }
+main div img {
+    margin: 45px;
+  }
+ 
+footer {
+    text-align: center;
+    background-color: wheat;
+    padding: 10px;
+ 
+  }
 
- footer {
-   text-align: center;
-   background-color: wheat;
-   padding: 10px;
+@media  only screen and (max-width: 820px) {
+    .container {
+        display: inline-block;
+        cursor: pointer;
+        position: absolute;
+        right: 1rem;
+        top: 0.5rem;
+    }
+    
+    .menu-active {
+        display: block !important;
+    }
+      
+      .bar1, .bar2, .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: #333;
+        margin: 6px 0;
+        transition: 0.4s;
+      }
+      
+      /* Rotate first bar */
+      .change .bar1 {
+        transform: translate(0, 11px) rotate(-45deg);
+      }
+      
+      /* Fade out the second bar */
+      .change .bar2 {opacity: 0;}
+      
+      /* Rotate last bar */
+      .change .bar3 {
+        transform: translate(0, -11px) rotate(45deg);
+      }
+    .menu {
+        display: none;
+        width: 100%;
+    } 
 
- }
+    .wrap {
+        padding: 1rem;
+        position: relative;
+        height: auto;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .menu li {
+        margin: 0;
+        margin-top: 2rem;
+    }
+    .menu li:hover {
+        background-color: antiquewhite;
+    }
+    
+    main {
+        grid-template-columns: 1fr;
+    }
+    main div video {
+        display: grid;
+        margin: auto;
+    }
+    main div iframe {
+        display: grid;
+        margin: auto;
+    }
+    main div img {
+        display: grid;
+        margin: auto;
+    }
+    @media  only screen and (max-width: 480px) {
+        .container {
+            display: inline-block;
+            cursor: pointer;
+            position: absolute;
+            right: 1rem;
+            top: 0.5rem;
+        }
+        
+        .menu-active {
+            display: block !important;
+        }
+          
+          .bar1, .bar2, .bar3 {
+            width: 35px;
+            height: 5px;
+            background-color: #333;
+            margin: 6px 0;
+            transition: 0.4s;
+          }
+          
+          /* Rotate first bar */
+          .change .bar1 {
+            transform: translate(0, 11px) rotate(-45deg);
+          }
+          
+          /* Fade out the second bar */
+          .change .bar2 {opacity: 0;}
+          
+          /* Rotate last bar */
+          .change .bar3 {
+            transform: translate(0, -11px) rotate(45deg);
+          }
+        .menu {
+            display: none;
+            width: 100%;
+        } 
+    
+        .wrap {
+            padding: 1rem;
+            position: relative;
+            height: auto;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+        
+        .menu li {
+            margin: 0;
+            margin-top: 2rem;
+        }
+        .menu li:hover {
+            background-color: antiquewhite;
+        }
+        
+        main {
+            grid-template-columns: 1fr;
+        }
+        main div video {
+            display: grid;
+            margin: auto;
+        }
+        main div iframe {
+            display: grid;
+            margin: auto;
+        }
+        main div img {
+            display: grid;
+            margin: auto;
+        }
